--- a/.gitignore
+++ b/.gitignore
@@ -132,4 +132,8 @@ dmypy.json
 pyvenv.cfg
 pip-selfcheck.json
 
+### macOS invisible files ###
+.DS_Store
+.DS_STORE
+
 # End of https://www.gitignore.io/api/python
