--- a/magpy/rapid_system_info.yaml
+++ b/magpy/rapid_system_info.yaml
@@ -37,7 +37,8 @@ maxFrequency:
             90: 49,  91: 48,  92: 47,  93: 46,  94: 46,  95: 45,  96: 44,  97: 43,  98: 42,  99: 42,  100: 41
         }
     115:
-        0: { 0: 36,  1: 36,  2: 36,  3: 36,  4: 36,  5: 36,  6: 36,  7: 36,  8: 36,  9: 36,
+        0: { 
+             0: 36,  1: 36,  2: 36,  3: 36,  4: 36,  5: 36,  6: 36,  7: 36,  8: 36,  9: 36,
             10: 36, 11: 36, 12: 36, 13: 36, 14: 36, 15: 36, 16: 36, 17: 36, 18: 36, 19: 36,
             20: 36, 21: 36, 22: 36, 23: 36, 24: 36, 25: 36, 26: 36, 27: 36, 28: 36, 29: 36,
             30: 36, 31: 35, 32: 35, 33: 34, 34: 33, 35: 32, 36: 32, 37: 31, 38: 30, 39: 29,
@@ -46,8 +47,10 @@ maxFrequency:
             60: 19, 61: 18, 62: 18, 63: 18, 64: 18, 65: 17, 66: 17, 67: 17, 68: 16, 69: 16,
             70: 16, 71: 16, 72: 16, 73: 15, 74: 15, 75: 15, 76: 15, 77: 14, 78: 14, 79: 14,
             80: 14, 81: 14, 82: 13, 83: 13, 84: 13, 85: 13, 86: 13, 87: 12, 88: 12, 89: 12,
-            90: 12, 91: 12, 92: 12, 93: 12, 94: 12, 95: 11, 96: 11, 97: 11, 98: 11, 99: 11, 100: 11}
-        1: { 0: 60,  1: 60,  2: 60,  3: 60,  4: 60,  5: 60,  6: 60,  7: 60,  8: 60,  9: 60,
+            90: 12, 91: 12, 92: 12, 93: 12, 94: 12, 95: 11, 96: 11, 97: 11, 98: 11, 99: 11, 100: 11
+        }
+        1: {
+             0: 60,  1: 60,  2: 60,  3: 60,  4: 60,  5: 60,  6: 60,  7: 60,  8: 60,  9: 60,
             10: 60, 11: 60, 12: 60, 13: 60, 14: 60, 15: 60, 16: 60, 17: 60, 18: 60, 19: 60,
             20: 60, 21: 60, 22: 60, 23: 60, 24: 60, 25: 60, 26: 60, 27: 60, 28: 60, 29: 60,
             30: 60, 31: 60, 32: 60, 33: 60, 34: 60, 35: 60, 36: 60, 37: 60, 38: 59, 39: 57,
@@ -56,8 +59,10 @@ maxFrequency:
             60: 37, 61: 36, 62: 36, 63: 35, 64: 35, 65: 34, 66: 34, 67: 33, 68: 33, 69: 32,
             70: 32, 71: 31, 72: 31, 73: 30, 74: 30, 75: 29, 76: 29, 77: 28, 78: 28, 79: 28,
             80: 27, 81: 27, 82: 27, 83: 26, 84: 26, 85: 26, 86: 26, 87: 25, 88: 25, 89: 25,
-            90: 24, 91: 24, 92: 24, 93: 24, 94: 23, 95: 23, 96: 23, 97: 22, 98: 22, 99: 22, 100: 22}
-        2: { 0: 60,  1: 60,  2: 60,  3: 60,  4: 60,  5: 60,  6: 60,  7: 60,  8: 60,  9: 60,
+            90: 24, 91: 24, 92: 24, 93: 24, 94: 23, 95: 23, 96: 23, 97: 22, 98: 22, 99: 22, 100: 22
+        }
+        2: {
+             0: 60,  1: 60,  2: 60,  3: 60,  4: 60,  5: 60,  6: 60,  7: 60,  8: 60,  9: 60,
             10: 60, 11: 60, 12: 60, 13: 60, 14: 60, 15: 60, 16: 60, 17: 60, 18: 60, 19: 60,
             20: 60, 21: 60, 22: 60, 23: 60, 24: 60, 25: 60, 26: 60, 27: 60, 28: 60, 29: 60,
             30: 60, 31: 60, 32: 60, 33: 60, 34: 60, 35: 60, 36: 60, 37: 60, 38: 60, 39: 60,
@@ -66,8 +71,10 @@ maxFrequency:
             60: 47, 61: 46, 62: 46, 63: 45, 64: 44, 65: 43, 66: 43, 67: 42, 68: 41, 69: 40,
             70: 40, 71: 39, 72: 39, 73: 38, 74: 37, 75: 37, 76: 36, 77: 36, 78: 35, 79: 35,
             80: 34, 81: 34, 82: 33, 83: 33, 84: 33, 85: 32, 86: 32, 87: 31, 88: 31, 89: 30,
-            90: 30, 91: 30, 92: 29, 93: 29, 94: 28, 95: 28, 96: 28, 97: 27, 98: 27, 99: 27, 100: 25}
-joules: { 0: 0.0,    1: 0.0,    2: 0.1,    3: 0.2,    4: 0.4,    5: 0.6,    6: 0.9,    7: 1.2,    8: 1.6,    9: 2.0,
+            90: 30, 91: 30, 92: 29, 93: 29, 94: 28, 95: 28, 96: 28, 97: 27, 98: 27, 99: 27, 100: 25
+        }
+joules: { 
+         0: 0.0,    1: 0.0,    2: 0.1,    3: 0.2,    4: 0.4,    5: 0.6,    6: 0.9,    7: 1.2,    8: 1.6,    9: 2.0,
         10: 2.5,   11: 3.0,   12: 3.6,   13: 4.3,   14: 4.9,   15: 5.7,   16: 6.4,   17: 7.3,   18: 8.2,   19: 9.1,
         20: 10.1,  21: 11.1,  22: 12.2,  23: 13.3,  24: 14.5,  25: 15.7,  26: 17.0,  27: 18.4,  28: 19.7,  29: 21.2,
         30: 22.7,  31: 24.2,  32: 25.8,  33: 27.4,  34: 29.1,  35: 30.8,  36: 32.6,  37: 34.5,  38: 36.4,  39: 38.3,
